globex/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: globex
  name: globex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globex
  template:
    metadata:
      labels:
        app: globex
    spec:
      containers:
        - name: globex
          image: lrochette/globex:xxx
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
