globex/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: globex-dev
  name: globex-dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: globex-dev
  type: ClusterIP
