globex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: globex-dev
spec:
  ingressClassName: nginx
  rules:
    - host: lrcsdp.support.cf-cd.com
      http:
        paths:
          - path: /globex
            backend:
              service:
                name: globex
                port:
                  number: 80
            pathType: ImplementationSpecific
